WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
64033
InspectorInstrumentation.cpp compilation is broken
https://bugs.webkit.org/show_bug.cgi?id=64033
Summary
InspectorInstrumentation.cpp compilation is broken
Oleg Romashin (:romaxa)
Reported
2011-07-06 14:54:10 PDT
ation.o ../../../Source/WebCore/inspector/InspectorInstrumentation.cpp ../../../Source/WebCore/inspector/InspectorInstrumentation.cpp: In static member function 'static void WebCore::InspectorInstrumentation::didInvalidateStyleAttrImpl(WebCore::InstrumentingAgents*, WebCore::Node*)': ../../../Source/WebCore/inspector/InspectorInstrumentation.cpp:165: error: 'class WebCore::InstrumentingAgents' has no member named 'inspectorDOMDebuggerAgent' ../../../Source/WebCore/inspector/InspectorInstrumentation.cpp:166: error: invalid use of incomplete type 'struct WebCore::InspectorDOMDebuggerAgent' ../../../Source/WebCore/inspector/InstrumentingAgents.h:42: error: forward declaration of 'struct WebCore::InspectorDOMDebuggerAgent' make: *** [obj/release/InspectorInstrumentation.o] Error 1
Attachments
Fix inspector compilation without debugger enabled
(1.47 KB, patch)
2011-07-06 14:58 PDT
,
Oleg Romashin (:romaxa)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Oleg Romashin (:romaxa)
Comment 1
2011-07-06 14:55:51 PDT
Introduced in
bug 62982
http://trac.webkit.org/changeset/89245
Oleg Romashin (:romaxa)
Comment 2
2011-07-06 14:58:00 PDT
Created
attachment 99888
[details]
Fix inspector compilation without debugger enabled
Yury Semikhatsky
Comment 3
2011-07-06 23:32:03 PDT
Oleg, thanks for taking a look at this. FYI: there is a short link webkit.org/new-inspector-bug which will create a bug with correct component, title and all potential inspector reviewers in the CC list. It is also reachable under New bug > Inspector: The Web Inspector Developer Tools link.
WebKit Review Bot
Comment 4
2011-07-07 00:08:11 PDT
Comment on
attachment 99888
[details]
Fix inspector compilation without debugger enabled Clearing flags on attachment: 99888 Committed
r90544
: <
http://trac.webkit.org/changeset/90544
>
WebKit Review Bot
Comment 5
2011-07-07 00:08:16 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug