2011-07-07  Oleg Romashin  <romaxa@gmail.com>

Fix InspectorInstrumentation compilation.
        https://bugs.webkit.org/show_bug.cgi?id=64033

        Reviewed by Yury Semikhatsky.

        No new tests. just compile fix.

        * inspector/InspectorInstrumentation.cpp:
        (WebCore::InspectorInstrumentation::didInvalidateStyleAttrImpl):

Canonical link: https://commits.webkit.org/79809@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@90544 268f45cc-cd09-0410-ab3c-d52691b4dbfc